--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -27,6 +27,9 @@
             "js": [
                 "lib/jquery-3.2.1.min.js",
                 "lib/underscore-min.js",
+                "js/components.js",
+                "js/utils.js",
+                "js/views.js",
                 "js/maimodorun.js"
             ],
             "css": [
