--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/ofuton/maimodorun#readme",
   "scripts": {
-    "eslint": "./node_modules/.bin/eslint ./extension/js/*.js"
+    "eslint": "./node_modules/.bin/eslint ./extension/js/*.js",
+    "eslint:fix": "./node_modules/.bin/eslint --fix ./extension/js/*.js"
   }
 }
