--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "eslint": "./node_modules/.bin/eslint ./extension/js/*.js",
+    "eslint:fix": "./node_modules/.bin/eslint --fix ./extension/js/*.js"
   },
   "repository": {
     "type": "git",
@@ -32,9 +34,5 @@
   "bugs": {
     "url": "https://github.com/ofuton/maimodorun/issues"
   },
-  "homepage": "https://github.com/ofuton/maimodorun#readme",
-  "scripts": {
-    "eslint": "./node_modules/.bin/eslint ./extension/js/*.js",
-    "eslint:fix": "./node_modules/.bin/eslint --fix ./extension/js/*.js"
-  }
+  "homepage": "https://github.com/ofuton/maimodorun#readme"
 }
