Fixing ESLint's "Parsing error: Unexpected token = "
Specifying babel-eslint as the parser, the problem is resolved.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,7 @@
         "browser": true
     },
     "extends": "eslint:recommended",
-    "parserOptions": {
-        "ecmaVersion": 6
-    },
+    "parser": "babel-eslint",
     "rules": {
         "indent": [
             "error",
