--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "eslint": "^5.6.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-eslint": "^9.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "eslint": "./node_modules/.bin/eslint ./extension/js/*.js",
