--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "eslint": "^5.6.0"
   },
   "devDependencies": {
-    "babel-eslint": "^9.0.0"
+    "babel-eslint": "^9.0.0",
+    "prettier": "1.14.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
