--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
+    "eslint-config-prettier": "3.1.0",
+    "eslint-plugin-prettier": "2.7.0",
     "prettier": "1.14.3"
   },
   "scripts": {
