--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp": "^4.0.0",
     "gulp-postcss": "^8.0.0",
     "gulp-sourcemaps": "^2.6.4",
+    "postcss-import": "^12.0.0",
     "postcss-preset-env": "^6.0.10"
   },
   "scripts": {
