--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "postcss-apply": "^0.11.0",
     "postcss-import": "^12.0.0",
+    "postcss-neat": "^2.5.3",
     "postcss-preset-env": "^6.0.10"
   },
   "scripts": {
