--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "gulp:watch": "./node_modules/.bin/gulp watch",
     "gulp:css": "./node_modules/.bin/gulp css"
   },
   "repository": {
