--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "gulp:watch": "./node_modules/.bin/gulp watch",
-    "gulp:css": "./node_modules/.bin/gulp css"
+    "gulp:style": "./node_modules/.bin/gulp style"
   },
   "repository": {
     "type": "git",
