--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "main": "extensions/js/maimodorun.js",
   "devDependencies": {
     "cssnano": "^4.1.4",
+    "del": "^3.0.0",
     "gulp": "^4.0.0",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-minify": "^3.1.0",
     "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
     "gulp-sourcemaps": "^2.6.4",
+    "gulp-zip": "^4.2.0",
     "postcss-apply": "^0.11.0",
     "postcss-import": "^12.0.0",
     "postcss-neat": "^2.5.3",
@@ -15,9 +20,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "gulp:build": "./node_modules/.bin/gulp build",
     "gulp:watch": "./node_modules/.bin/gulp watch",
-    "gulp:styles": "./node_modules/.bin/gulp styles"
+    "gulp:build": "./node_modules/.bin/gulp build",
+    "gulp:clean": "./node_modules/.bin/gulp clean"
   },
   "repository": {
     "type": "git",
@@ -41,5 +46,6 @@
   "bugs": {
     "url": "https://github.com/ofuton/maimodorun/issues"
   },
-  "homepage": "https://github.com/ofuton/maimodorun#readme"
+  "homepage": "https://github.com/ofuton/maimodorun#readme",
+  "dependencies": {}
 }
