--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "devDependencies": {
     "babel-eslint": "^9.0.0",
     "cssnano": "^4.1.4",
+    "debounce": "^1.2.0",
     "del": "^3.0.0",
     "eslint": "^5.6.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^2.7.0",
     "gulp": "^4.0.0",
     "gulp-imagemin": "^4.1.0",
-    "gulp-minify": "^3.1.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^8.0.0",
@@ -20,11 +20,16 @@
     "gulp-rename": "^1.4.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-zip": "^4.2.0",
+    "jquery": "^3.3.1",
+    "moment": "^2.24.0",
     "postcss-apply": "^0.11.0",
     "postcss-import": "^12.0.0",
     "postcss-neat": "^2.5.3",
     "postcss-preset-env": "^6.0.10",
-    "prettier": "^1.14.3"
+    "prettier": "^1.14.3",
+    "pug": "^2.0.3",
+    "webpack": "^4.27.1",
+    "webpack-stream": "^5.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
