--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,8 @@
 {
     "env": {
-        "browser": true
+        "es6": true,
+        "browser": true,
+        "webextensions": true
     },
     "extends": [
         "eslint:recommended",
