--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "./node_modules/.bin/eslint ./src/scripts/*.js",
-    "eslint:fix": "./node_modules/.bin/eslint --fix ./src/scripts/*.js",
+    "eslint": "./node_modules/.bin/eslint ./src/js/**/*.js",
+    "eslint:fix": "./node_modules/.bin/eslint --fix ./src/js/**/*.js",
     "gulp:watch": "./node_modules/.bin/gulp watch",
     "gulp:build": "./node_modules/.bin/gulp build",
     "gulp:clean": "./node_modules/.bin/gulp clean:all",
