--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,5 +44,5 @@ jobs:
           cache: npm
       - name: Install dependencies
         run: npm ci
-      - name: Package extension
+      - name: Build extension
         run: npm run build
