--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: Release
 
 on:
   push:
@@ -20,23 +20,10 @@ jobs:
         run: npm run build
       - name: Get current version
         id: get_version
-        run: echo ::set-output name=VERSION::$(node -p "require('./package.json').version")
+        run: echo "version=$(node -p \"require('./package.json').version\")" >> $GITHUB_OUTPUT
       - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.get_version.outputs.VERSION }}
-          release_name: Release ${{ steps.get_version.outputs.VERSION }}
-          draft: false
-          prerelease: false
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./maimodorun.zip
-          asset_name: my-artifact.zip
-          asset_content_type: application/zip
+        run: gh release create v${{ steps.get_version.outputs.version }} -t v${{ steps.get_version.outputs.version }}
+      - name: Upload artifact
+        run: |
+          mv ./maimodorun.zip maimodorun-v${{ steps.get_version.outputs.version }}.zip
+          gh release upload v${{ steps.get_version.outputs.version }} maimodorun-v${{ steps.get_version.outputs.version }}.zip
